src/test/resources/gold/highlighting/annotator/unclosed_comment.d

/+
 First level
/+
 Second level
+<error descr="Unclosed comment">/</error>